# emailtriageopenenv_hackathon

./: Dockerfile  LICENSE  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
graders/: graders.py
tasks/: email_data.py
tests/: test_env.py
