[project]
name = "email-triage-env"
version = "1.0.0"
description = "Real-world email triage environment for AI agent training (OpenEnv spec)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "openai==1.57.0",
    "requests==2.32.3",
    "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "tasks*", "graders*"]
